# frac

./: Cargo.toml  README.md
src/: algorithms.rs  cli.rs  gpu.rs  main.rs  mandelbrot.rs  parsers.rs  types.rs
src/shaders/: mandelbrot.cl
