[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.*"
image = "0.25.*"
crossbeam = "0.8.*"
colors-transform = "0.2.*"
clap = { version = "4.5.*", features = ["derive", "cargo"]}
ocl = { version = "0.19.*", optional = true }

[features]
gpu = ["dep:ocl"]